# data_agent_proj

./: .gitignore  README.md  pyproject.toml
src/: agent.py  data_loader.py  main.py  tools.py
src/tools/: __init__.py  data_quality.py  time_series.py  validation.py
tests/: conftest.py  test_data_loader.py  test_tools.py
